--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -89,7 +89,7 @@
             />
 
         <Button
-            android:id="@+id/btn_out"
+            android:id="@+id/btn_dangky"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Đăng ký"
