--- a/app/src/main/res/layout/header_navigation_view.xml
+++ b/app/src/main/res/layout/header_navigation_view.xml
@@ -38,6 +38,6 @@
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quản trị viên"/>
+            android:text="Admin"/>
     </LinearLayout>
 </LinearLayout>
