--- a/app/src/main/res/drawable/shape_btn.xml
+++ b/app/src/main/res/drawable/shape_btn.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#E6903B"/>
+<solid android:color="#BFEA7C"/>
     <corners android:radius="10dp"/>
 </shape>
