--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
-                android:textColor="#4CAF50"
+                android:textColor="#BFEA7C"
                 android:textSize="40dp"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
@@ -38,11 +38,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="Email"
-                android:textColorHint="#4CAF50"
+                android:textColorHint="#B2B2B2"
                 android:padding="10dp"
                 tools:ignore="HardcodedText,UnusedAttribute"
-                android:textColor="#4CAF50"
-                android:searchResultHighlightColor="#4CAF50"
+                android:textColor="#000000"
+                android:searchResultHighlightColor="#000000"
                 android:background="@drawable/shape_edittext"
                 android:id="@+id/edt_email_dangnhap"
                 />
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="Password"
-                android:textColorHint="#4CAF50"
+                android:textColorHint="#B2B2B2"
                 android:padding="10dp"
                 android:inputType="textPassword"
                 android:textColor="#4CAF50"
@@ -74,7 +74,7 @@
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
 
-                    android:textColor="#4CAF50"
+                    android:textColor="#BFEA7C"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:background="@drawable/shape_edittext"
@@ -85,7 +85,7 @@
                     android:text="Đăng ký"
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
-                    android:textColor="#4CAF50"
+                    android:textColor="#BFEA7C"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:background="@drawable/shape_edittext"
@@ -108,12 +108,12 @@
                         android:layout_height="wrap_content"
                         android:text="Tôi quên mật khẩu "
                         tools:ignore="HardcodedText"
-                        android:textColor="#4CAF50"
+                        android:textColor="#000000"
                         android:id="@+id/tv_quenpass"/>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="#4CAF50"/>
+                        android:background="#000000"/>
                 </LinearLayout>
             </LinearLayout>
 
