--- a/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
+++ b/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="#4CAF50"
+        android:background="#BFEA7C"
         android:id="@+id/toolbar_khachhang"
         app:titleTextColor="@color/white"
         app:menu="@menu/menu_toolbar"
@@ -24,7 +24,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#4CAF50"
+        android:background="#BFEA7C"
         app:itemActiveIndicatorStyle="@drawable/shape_icon2"
         app:itemIconTint="@color/white"
         android:id="@+id/bnv_khachhang"
