--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -8,8 +8,7 @@
     android:id="@+id/scv_xem"
     android:padding="10dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -34,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="500dp"
                     android:background="@color/white"
-                    android:src="#E6903B" />
+                    android:src="#BFEA7C" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -53,16 +52,16 @@
                 android:text="Giá sản phẩm"
                 android:textColor="#FF0000"
                 android:textSize="20dp"
-                android:textStyle="normal" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_mamsp_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Năm sản xuất"
-                android:textColor="#FF8080"
+                android:textColor="#2196F3"
                 android:textSize="20dp"
-                android:textStyle="normal" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -77,7 +76,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Kích cỡ: "
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#009688"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_listco"
@@ -101,7 +102,7 @@
                     android:id="@+id/bnt_tru_soluong"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="#FEC389"
+                    android:background="#BFEA7C"
                     android:text="-"
                     android:textColor="@color/white"
                     android:textSize="20dp"
@@ -120,7 +121,7 @@
                     android:id="@+id/bnt_cong_soluong"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="#FEC389"
+                    android:background="#BFEA7C"
                     android:text="+"
                     android:textColor="@color/white"
                     android:textSize="20dp"
