--- a/app/src/main/res/layout/activity_show_more.xml
+++ b/app/src/main/res/layout/activity_show_more.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/vang"
+        android:background="#BFEA7C"
         android:padding="10dp">
 
         <TextView
