--- a/app/src/main/res/layout/dialog_hotro.xml
+++ b/app/src/main/res/layout/dialog_hotro.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Nhập Số điện thoại của bạn "
-            android:textColor="#E6903B"
+            android:textColor="#000000"
             android:textSize="24dp"
             android:textStyle="bold" />
         <TextView
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="Nhân viên hỗ trợ sẽ liên lạc với bạn sớm nhất"
-            android:textColor="#FFC891"
+            android:textColor="#000000"
             android:textStyle="normal" />
         <EditText
             android:id="@+id/edt_sdt_hotro"
@@ -37,8 +37,8 @@
             android:background="@drawable/shape_edittext"
             android:hint="Số điện thoại"
             android:padding="10dp"
-            android:textColor="#E6903B"
-            android:textColorHint="#E6903B" />
+            android:textColor="#000000"
+            android:textColorHint="#B2B2B2" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_hotro"
