--- a/app/src/main/res/layout/dialog_nhanvien.xml
+++ b/app/src/main/res/layout/dialog_nhanvien.xml
@@ -10,7 +10,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Thêm nhân viên"
-    android:textColor="#FFC107"
+    android:textColor="#BFEA7C"
     android:textStyle="bold"
     android:textSize="30dp"
     android:layout_gravity="center"
@@ -20,10 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="10dp"
-        android:textColor="#E6903B"
+        android:textColor="#000000"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập Email"
-        android:textColorHint="@color/vang"
+        android:textColorHint="#B2B2B2"
         android:padding="10dp" />
 
     <EditText
@@ -31,8 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="10dp"
-        android:textColor="#E6903B"
-        android:textColorHint="@color/vang"
+        android:textColor="#000000"
+        android:textColorHint="#B2B2B2"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập họ tên"
         android:padding="10dp" />
@@ -44,10 +44,10 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập số điện thoại"
-        android:textColorHint="@color/vang"
+        android:textColorHint="#B2B2B2"
         android:maxLength="10"
         android:inputType="number"
-        android:textColor="#E6903B"
+        android:textColor="#000000"
         android:padding="10dp" />
 
     <LinearLayout
