--- a/app/src/main/res/layout/dialog_them_hang.xml
+++ b/app/src/main/res/layout/dialog_them_hang.xml
@@ -16,7 +16,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="Hãng sản phẩm đang có "
-            android:textColor="#E6903B"
+            android:textColor="#BFEA7C"
             android:textSize="30dp"
             android:textStyle="bold"
             android:id="@+id/tv_tittle2"
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#E6903B" />
+            android:background="#BFEA7C" />
 
         <ListView
             android:padding="10dp"
@@ -40,8 +40,8 @@
             android:layout_height="50dp"
             android:padding="10dp"
             android:background="@drawable/shape_edittext"
-            android:textColor="#E6903B"
-            android:textColorHint="#E6903B"
+            android:textColor="#000000"
+            android:textColorHint="#B2B2B2"
             android:textSize="15dp"
             android:hint="Nhập hãng muốn thêm"/>
 
