--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -41,7 +41,7 @@
                 android:textColorHint="#B2B2B2"
                 android:padding="10dp"
                 tools:ignore="HardcodedText,UnusedAttribute"
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:searchResultHighlightColor="#BFEA7C"
                 android:background="@drawable/shape_edittext"
                 android:id="@+id/edt_email_dangnky"
@@ -53,7 +53,7 @@
                 android:textColorHint="#B2B2B2"
                 android:padding="10dp"
                 android:inputType="textPassword"
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:searchResultHighlightColor="#BFEA7C"
                 android:layout_marginTop="10dp"
                 tools:ignore="Autofill,HardcodedText,UnusedAttribute"
@@ -67,7 +67,7 @@
                 android:textColorHint="#B2B2B2"
                 android:padding="10dp"
                 android:inputType="textPassword"
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:searchResultHighlightColor="#BFEA7C"
                 android:layout_marginTop="10dp"
                 tools:ignore="Autofill,HardcodedText,UnusedAttribute"
