--- a/app/src/main/res/layout/dialog__doi_mat_khau.xml
+++ b/app/src/main/res/layout/dialog__doi_mat_khau.xml
@@ -27,7 +27,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="Đổi mật khẩu "
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:textSize="30dp"
                 android:textStyle="bold"/>
             <EditText
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_edittext"
+                android:background="@drawable/edit_dmk"
                 android:hint="Nhập mật khẩu cũ"
                 android:padding="10dp"
                 android:inputType="textPassword"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_edittext"
+                android:background="@drawable/edit_dmk"
                 android:hint="Nhập mật khẩu mới"
                 android:padding="10dp"
                 android:inputType="textPassword"
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_edittext"
+                android:background="@drawable/edit_dmk"
                 android:hint="Xác nhận mật khẩu"
                 android:padding="10dp"
                 android:textColor="#000000"
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/shape_btn"
+                android:background="@drawable/btn_dmk"
                 android:text="Đổi mật khẩu"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
