--- a/app/src/main/res/layout/item_quan_ly_giay.xml
+++ b/app/src/main/res/layout/item_quan_ly_giay.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:textColor="#FF9800"
+            android:textColor="#000000"
             android:text="Tên sản phẩm: "/>
         <TextView
             android:id="@+id/tv_Gia"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
-            android:textColor="#D19D00"
+            android:textColor="#FF0000"
             android:text="Giá: "/>
         <TextView
             android:id="@+id/tv_Soluong"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
-            android:textColor="#D19D00"
+            android:textColor="#03A9F4"
             android:text="Số lượng: "/>
         <TextView
             android:id="@+id/tv_Thuonghieu"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
-            android:textColor="#D19D00"
+            android:textColor="#000000"
             android:text="Thương hiệu: "/>
         <TextView
             android:id="@+id/tv_Namsx"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="15dp"
-            android:textColor="#D19D00"
+            android:textColor="#000000"
             android:text="Năm sản xuất: "/>
 
     </LinearLayout>
