--- a/app/src/main/res/drawable/btn_doanhthu.xml
+++ b/app/src/main/res/drawable/btn_doanhthu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:color="#BFEA7C" android:width="1dp"/>
+    <solid android:color="#FF0000"/>
     <corners android:radius="10dp"/>
 </shape>
