--- a/app/src/main/res/layout/item_cuahang_sanpham.xml
+++ b/app/src/main/res/layout/item_cuahang_sanpham.xml
@@ -5,7 +5,7 @@
     android:layout_width="180dp"
     android:padding="10dp"
     app:cardCornerRadius="10dp"
-    android:backgroundTint="#D9D9D9"
+    android:backgroundTint="#F7EEDD"
     android:layout_margin="5dp"
     android:layout_height="wrap_content">
     <LinearLayout
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:text="Giá sản phẩm"
             android:textColor="#FF0000"
-            android:id="@+id/tv_giasp_cuahang"/>
+            android:id="@+id/tv_giasp_cuahang"
+            android:textStyle="bold"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
