--- a/app/src/main/res/layout/item_kichco.xml
+++ b/app/src/main/res/layout/item_kichco.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:id="@+id/cv_kichco"
-        android:background="#FFC107"
+        android:background="#00BCD4"
         android:layout_height="wrap_content"
 
         tools:ignore="Orientation">
@@ -18,7 +18,7 @@
             android:layout_height="20dp"
             android:textStyle="bold"
             android:text="43"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"
             android:id="@+id/tv_kichco_show1"/>
     </LinearLayout>
