--- a/app/src/main/res/layout/item_list_sanpham_mua.xml
+++ b/app/src/main/res/layout/item_list_sanpham_mua.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15dp"
-            android:textColor="#FF9800"
+            android:textColor="#000000"
             android:textStyle="bold"
             android:text="Tên sản phẩm: "/>
         <TextView
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10dp"
-            android:textColor="#D19D00"
+            android:textColor="#000000"
             android:text="Tên sản phẩm: "/>
         <TextView
             android:id="@+id/tv_Gia_ct"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="10dp"
-            android:textColor="#D19D00"
+            android:textColor="#FF0000"
             android:text="Giá: "/>
         <TextView
             android:id="@+id/tv_Soluong_ct"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="10dp"
-            android:textColor="#D19D00"
+            android:textColor="#00BCD4"
             android:text="Số lượng: "/>
         <TextView
             android:id="@+id/tv_SoluongTrongKho_ct"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="10dp"
-            android:textColor="#D19D00"
+            android:textColor="#00BCD4"
             android:text="Số lượng: "/>
 
     </LinearLayout>
