--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="THÔNG BÁO"
-        android:textColor="@color/vang"
+        android:textColor="#03A9F4"
         android:textStyle="bold"
         />
     <TextView
