--- a/app/src/main/res/layout/item_top10sp.xml
+++ b/app/src/main/res/layout/item_top10sp.xml
@@ -41,7 +41,7 @@
         <TextView
             android:id="@+id/tv_SOLUONG"
             android:text="so luong"
-            android:textColor="@color/black"
+            android:textColor="#00BCD4"
             android:textSize="18dp"
             android:layout_gravity="end"
             android:layout_marginEnd="10dp"
