--- a/app/src/main/res/layout/tab_thongtincanhan.xml
+++ b/app/src/main/res/layout/tab_thongtincanhan.xml
@@ -26,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Thông tin cá nhân"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="14dp"
                     android:textStyle="bold"
 
@@ -36,7 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=">"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                android:background="#E6903B" />
+                android:background="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Địa chỉ của bạn"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="14dp"
                     android:textStyle="bold"
 
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=">"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                android:background="#E6903B" />
+                android:background="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -100,7 +100,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Lịch sử mua hàng"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="14dp"
                     android:textStyle="bold"
 
@@ -110,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=">"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                android:background="#E6903B" />
+                android:background="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Đổi mật khẩu"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="14dp"
                     android:textStyle="bold" />
 
@@ -145,7 +145,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=">"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -153,7 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                android:background="#E6903B" />
+                android:background="#000000" />
         </LinearLayout>
 
         <LinearLayout
@@ -172,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Lịch sử nạp"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="14dp"
                     android:textStyle="bold" />
 
@@ -180,7 +180,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=">"
-                    android:textColor="#E6903B"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -188,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
-                android:background="#E6903B" />
+                android:background="#000000" />
         </LinearLayout>
     </LinearLayout>
 
@@ -197,7 +197,7 @@
         android:layout_height="50dp"
         android:layout_gravity="bottom"
         android:layout_margin="20dp"
-        android:background="#FFC58B"
+        android:background="#FF0000"
         android:id="@+id/ll_dangxuat"
         app:layout_constraintBottom_toBottomOf="parent">
 <TextView
