--- a/app/src/main/res/layout/item_danhsachyeucaunap.xml
+++ b/app/src/main/res/layout/item_danhsachyeucaunap.xml
@@ -86,7 +86,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/shape_btn"
+            android:background="@drawable/btn_xacnhan"
             android:padding="10dp"
             android:text="Xác nhận"
             android:textColor="@color/white"
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:background="@drawable/shape_btn"
+            android:background="@drawable/btn_delete"
             android:padding="10dp"
             android:text="Hủy"
             android:textColor="@color/white"
