--- a/app/src/main/res/layout/item_ql_don_hang.xml
+++ b/app/src/main/res/layout/item_ql_don_hang.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:padding="10dp"
-        android:background="#F7EEDD"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
