--- a/app/src/main/res/layout/dialog_lichsu.xml
+++ b/app/src/main/res/layout/dialog_lichsu.xml
@@ -18,7 +18,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="Lịch sử mua hàng "
-            android:textColor="#BFEA7C"
+            android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold"/>
         <androidx.recyclerview.widget.RecyclerView
