--- a/app/src/main/res/layout/dialog_nhanvien.xml
+++ b/app/src/main/res/layout/dialog_nhanvien.xml
@@ -10,7 +10,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Thêm nhân viên"
-    android:textColor="#BFEA7C"
+    android:textColor="#000000"
     android:textStyle="bold"
     android:textSize="30dp"
     android:layout_gravity="center"
@@ -61,7 +61,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/shape_btn"
+            android:background="@drawable/btn_xacnhan"
             android:padding="10dp"
             android:text="Lưu"
             android:textColor="@color/white"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:background="@drawable/shape_btn"
+            android:background="@drawable/btn_delete"
             android:padding="10dp"
             android:text="Hủy"
             android:textColor="@color/white"
