--- a/app/src/main/res/layout/dialog_quenpass.xml
+++ b/app/src/main/res/layout/dialog_quenpass.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/shape_btn"
+            android:background="@drawable/btn_delete"
             android:text="Quên mật khẩu"
             android:textColor="@color/white"
             android:textStyle="bold" />
