--- a/app/src/main/res/layout/dialog_them_hang.xml
+++ b/app/src/main/res/layout/dialog_them_hang.xml
@@ -16,7 +16,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="Hãng sản phẩm đang có "
-            android:textColor="#BFEA7C"
+            android:textColor="#000000"
             android:textSize="30dp"
             android:textStyle="bold"
             android:id="@+id/tv_tittle2"
