--- a/app/src/main/res/layout/dialog_themsp.xml
+++ b/app/src/main/res/layout/dialog_themsp.xml
@@ -22,7 +22,7 @@
                android:text="Thêm sản phẩm"
                android:textSize="24dp"
                android:textStyle="bold"
-               android:textColor="#BFEA7C"
+               android:textColor="#000000"
                android:layout_margin="10dp"
                android:id="@+id/tv_themsanpham"
                />
@@ -111,7 +111,7 @@
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
-               android:background="@drawable/shape_btn"
+               android:background="@drawable/btn_xacnhan"
                android:layout_marginTop="10dp"
                android:text="Thêm"
                android:textColor="@color/white"
