--- a/app/src/main/res/layout/dialog_updateprofile.xml
+++ b/app/src/main/res/layout/dialog_updateprofile.xml
@@ -19,7 +19,7 @@
                android:text="Cập nhật thông tin"
                android:textSize="24dp"
                android:textStyle="bold"
-               android:textColor="#BFEA7C"
+               android:textColor="#000000"
                android:layout_margin="10dp"
                android:id="@+id/tv_suaTaiKhoan"
                />
@@ -67,7 +67,7 @@
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
-               android:background="@drawable/shape_btn"
+               android:background="@drawable/btn_xacnhan"
                android:layout_marginTop="10dp"
                android:text="Cập nhật ngay"
                android:textColor="@color/white"
