--- a/app/src/main/res/layout/item_kichco_add.xml
+++ b/app/src/main/res/layout/item_kichco_add.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="100dp"
-    android:backgroundTint="#F7EEDD"
+    android:backgroundTint="#FFFFFF"
     app:cardCornerRadius="100dp">
 <LinearLayout
     android:layout_width="wrap_content"
