--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng ký"
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:textSize="40dp"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
@@ -42,7 +42,7 @@
                 android:padding="10dp"
                 tools:ignore="HardcodedText,UnusedAttribute"
                 android:textColor="#000000"
-                android:searchResultHighlightColor="#BFEA7C"
+                android:searchResultHighlightColor="#00BCD4"
                 android:background="@drawable/shape_edittext"
                 android:id="@+id/edt_email_dangnky"
                 />
@@ -86,7 +86,7 @@
                     android:text="Đăng ký"
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
-                    android:textColor="#BFEA7C"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:background="@drawable/shape_edittext"
