--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
-                android:textColor="#BFEA7C"
+                android:textColor="#000000"
                 android:textSize="40dp"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
@@ -74,7 +74,7 @@
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
 
-                    android:textColor="#BFEA7C"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:background="@drawable/shape_edittext"
@@ -85,7 +85,7 @@
                     android:text="Đăng ký"
                     tools:ignore="HardcodedText"
                     android:padding="10dp"
-                    android:textColor="#BFEA7C"
+                    android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:background="@drawable/shape_edittext"
