--- a/app/src/main/res/layout/activity_man_hinh_khoi_dau.xml
+++ b/app/src/main/res/layout/activity_man_hinh_khoi_dau.xml
@@ -95,7 +95,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Make by đăng sao"
+        android:text="Make by Nam Anh"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/gl_line3"
         app:layout_constraintBottom_toBottomOf="parent"
