--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -65,8 +65,8 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E6903B" />
+                android:layout_height="3dp"
+                android:background="#000000" />
 
             <LinearLayout
                 android:layout_width="match_parent"
