--- a/app/src/main/res/layout/item_list_hang.xml
+++ b/app/src/main/res/layout/item_list_hang.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_btn"
+        android:background="@drawable/btn_xacnhan"
         android:orientation="vertical"
         android:padding="5dp">
 
