--- a/app/src/main/res/layout/dialog__doi_mat_khau.xml
+++ b/app/src/main/res/layout/dialog__doi_mat_khau.xml
@@ -21,13 +21,21 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/logo3"
+
+                android:layout_gravity="center"
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="Đổi mật khẩu "
-                android:textColor="#000000"
+                android:textColor="#575151"
                 android:textSize="30dp"
                 android:textStyle="bold"/>
             <EditText
@@ -73,7 +81,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_dmk"
                 android:text="Đổi mật khẩu"
-                android:textColor="@color/white"
+                android:textColor="#423F3F"
                 android:textStyle="bold" />
         </LinearLayout>
 
