--- a/app/src/main/res/layout/dialog_naptien.xml
+++ b/app/src/main/res/layout/dialog_naptien.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_dialog"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:orientation="vertical">
 <TextView
     android:layout_width="wrap_content"
@@ -32,8 +32,9 @@
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Tên chủ ví: Nguyễn Khắc Nam Anh"
+           android:text="Tên chủ ví: Nguyễn Khắc Nam Anh (NAMANHDEPZAI)"
            android:textColor="#000000"
+           android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
