--- a/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/app/src/main/res/layout/fragment_gio_hang.xml
@@ -50,7 +50,7 @@
                     android:text="1800000 đ"
                     android:textSize="15dp"
                     android:textStyle="bold"
-                    android:textColor="#E72929"/>
+                    android:textColor="#FF0000"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
